=========================================================================
CHANGE LOG
=========================================================================

2013-10-04 Thomas Holder <speleo3@users.sf.net>

	* fix segfault in OrthoRenderCGO
	  https://sourceforge.net/p/pymol/bugs/137/

	* importing.load_coords

	* improve util.chainbow

	* fix plugin manager PyMOLWiki URL install: strip whitespace

2013-10-01 Thomas Holder <speleo3@users.sf.net>, Blaine Bell <blaine.bell@schrodinger.com>

	* major re-work/organization of RepSphere.c and fixed sphere picking

	* fix color type settings return format for hex colors (0x prefix)

	* fix special keys in wizard input prompt

2013-09-09 Thomas Holder

	* add "x" "y" "z" selection operators
	  Example: select foo, x < 12.3

2013-09-08 Blaine Bell, Thomas Holder

	* fix seq viewer background color

	* add "backbone" and "sidechain" selection keywords

	* fix: cealign inverts target structure

2013-08-27 Thomas Holder <thomas.holder@schrodinger.com>

	* fix [bugs:#135] array overrun
	  https://sourceforge.net/p/pymol/bugs/135/

	* apply one part of [patches:#6]
	  https://sourceforge.net/p/pymol/patches/6/

	* preserve "use_shaders" setting when loading session files

	* simplify pymolrc search routine

	* fix CtSh-M click on group members in object menu panel

	* set_key string support

2013-08-13 Thomas Holder <thomas.holder@schrodinger.com>

	* fix h_add atom sorting

	* add "metals" keyword to selection language

2013-07-31 Thomas Holder <thomas.holder@schrodinger.com>

	* improve amber rst/crd support

	* fix pair_fitting with one atom pair

2013-07-23 Thomas Holder <thomas.holder@schrodinger.com>

	* fix numpy/ndarrayobject.h import

	* setup.py: add --osx-frameworks agument

	* rpc server: use register_instance

2013-07-16 Thomas Holder <thomas.holder@schrodinger.com>

	* fixed load_traj with stop/max arguments.
	  Thanks to David Osguthorpe for the patch.

	* fix pymol.importing.read_mmodstr
